--- a/ProjetoCinema/nbproject/project.properties
+++ b/ProjetoCinema/nbproject/project.properties
@@ -19,7 +19,7 @@ javadoc.author=false
 test.src.dir=test
 build.dir=build
 build.test.classes.dir=${build.dir}/test/classes
-platform.active=default_platform
+platform.active=JDK_1.8
 javac.compilerargs=
 main.class=cinema.Cinema
 dist.jar=${dist.dir}/ProjetoCinema.jar
