--- a/ProjetoCinema/nbproject/project.properties
+++ b/ProjetoCinema/nbproject/project.properties
@@ -1,5 +1,6 @@
 #Mon Sep 19 13:58:22 BRT 2016
 excludes=
+file.reference.postgresql-9.4.1211.jre6.jar=..\\..\\Users\\renat\\Downloads\\postgresql-9.4.1211.jre6.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 run.classpath=${javac.classpath}\:${build.classes.dir}
@@ -54,7 +55,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 mkdist.disabled=false
 endorsed.classpath=
-javac.classpath=
+javac.classpath=\
+    ${file.reference.postgresql-9.4.1211.jre6.jar}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
