Correcao realizada pelo professor Correcao de alguns erros nos quais nao foram possiveis ser corrigidos pelos alunos.

--- a/ProjetoCinema/nbproject/project.properties
+++ b/ProjetoCinema/nbproject/project.properties
@@ -1,15 +1,19 @@
 #Mon Sep 19 13:58:22 BRT 2016
 excludes=
-file.reference.postgresql-9.4.1211.jre6.jar=..\\..\\Users\\renat\\Downloads\\postgresql-9.4.1211.jre6.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
 javac.external.vm=true
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-javac.processorpath=${javac.classpath}
-javac.target=1.8
+javac.processorpath=\
+    ${javac.classpath}
+javac.target=1.7
 annotation.processing.processors.list=
 javadoc.noindex=false
 javadoc.additionalparam=
@@ -20,7 +24,7 @@ javadoc.author=false
 test.src.dir=test
 build.dir=build
 build.test.classes.dir=${build.dir}/test/classes
-platform.active=JDK_1.8
+platform.active=default_platform
 javac.compilerargs=
 main.class=cinema.Cinema
 dist.jar=${dist.dir}/ProjetoCinema.jar
@@ -33,7 +37,7 @@ dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
 javadoc.splitindex=true
 javadoc.encoding=${source.encoding}
-javac.source=1.8
+javac.source=1.7
 application.vendor=631510049
 junit.selected.version=4
 debug.classpath=${run.classpath}
@@ -56,7 +60,7 @@ src.dir=src
 mkdist.disabled=false
 endorsed.classpath=
 javac.classpath=\
-    ${file.reference.postgresql-9.4.1211.jre6.jar}
+    ${libs.PostgreSQLDriver.classpath}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
