--- a/ProjetoCinema/nbproject/project.properties
+++ b/ProjetoCinema/nbproject/project.properties
@@ -26,7 +26,7 @@ build.dir=build
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
-main.class=cinema.Cinema
+main.class=br.fraga.renata.cinema.Cinema
 dist.jar=${dist.dir}/ProjetoCinema.jar
 javac.test.processorpath=${javac.test.classpath}
 javadoc.use=true
